--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "delightsome_wbesite",
+  "name": "delightsome_website",
   "version": "1.0.0",
   "description": "",
   "main": "backend/server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js"
+    "start": "NODE_ENV=production node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm build --prefix frontend"
   },
   "keywords": [],
   "author": "",
-  "type": "module",
   "license": "ISC",
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -21,7 +21,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
-    "nanoid": "^5.0.9",
+    "nanoid": "^3.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-two-thumb-input-range": "^1.0.7",
