--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "backend/server.js",
   "scripts": {
     "dev": "nodemon backend/server.js",
-    "start": "NODE_ENV=production node backend/server.js",
+    "start": "node backend/server.js",
     "build": "npm install"
   },
   "keywords": [],
